fix social logo spacing, increase font size of hero

--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,8 @@ nav {
     margin: 3vw;
     color: #6845c2;
 }
+
+.social-logos {
+    margin-left: 15px;
+    margin-right: 15px;
+}
